fix footer spacing for better

--- a/web/themes/gavias_colin/css/master.css
+++ b/web/themes/gavias_colin/css/master.css
@@ -5706,7 +5706,7 @@ header.header-v2 .header-main {
 
 .pull-right.better {
   float: right !important;
-  margin: 0 0 20px;
+  margin: 20px 0 20px;
 }
 
 #footer .copyright {
